Provide default security policy for the Java SecurityManager (Trac #53) as described by "les [at] hazlewood [dot] com"
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@1113 1b6495e4-3631-0410-8e05-8f51eee8b9cc